@startuml diagramaDeClases

class Colaborador {
 - tipoDocumento: String
 - nroDocumento: String
 - direccion: String
 - nombre: String
 - apellido: String
 - fechaNacimiento: LocalDate
 - whatsapp: String
 - mail: String
 - userTelegram: String
 - puntajeNeto: float
 - cantidadViandasUltimoMes: Integer
}

class Recomendador {
 + filtrarReconocidos(Solicitud, List<Colaborador>): Recomendacion
}

Recomendador ..> " * " Colaborador
Recomendador ..> Solicitud
Recomendador ..> Recomendacion

class Recomendacion {
 - colaboradoresRecomendados: List<Colaborador>
 - solicitud: Solicitud
 - fechaRecomendacion: LocalDate
}

Recomendacion --> Solicitud
Recomendacion --> " * " Colaborador

class Solicitud {
 - cantMinPuntos: Integer
 - cantMinViandasUltimoMes: Integer
 - fecha: LocalDate
 - cantMaxColaboradores: Integer
 - solicitante: Solicitante 
}

class Solicitante {
 - razonSocial: String
 - rubro: String
 - whatsapp: String
 - mail: String
 - userTelegram: String
 - direccion: String
}

Solicitud --> Solicitante

@enduml